<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:id = "@+id/coinsText2"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/coins"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:id="@+id/coin_counter"
                android:layout_marginTop="16dp"
                android:text="@string/zero"
                android:textSize="18sp"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio2Alike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/two_alike_extra" />

            <RadioButton
                android:id="@+id/radio3Alike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/three_alike_extra" />

            <RadioButton
                android:id="@+id/radio4Alike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/four_alike_extra" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addWager"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:hint="@string/addWager"
                android:inputType="number"/>

            <Button
                android:layout_margin="8dp"
                android:id="@+id/goButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/go" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/diceGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/die1"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/zero"
                android:layout_margin="8dp"
                android:textSize="48sp"/>

            <TextView
                android:id="@+id/die2"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/zero"
                android:layout_margin="8dp"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/die3"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/zero"
                android:layout_margin="8dp"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/die4"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_margin="8dp"
                android:padding="16dp"
                android:text="@string/zero"
                android:textSize="48sp" />
        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <Button
                android:id="@+id/infoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
